fix padding to align borders

--- a/links/main.css
+++ b/links/main.css
@@ -100,7 +100,7 @@ media { display: block; width:100%; height:100%; background-size:cover; backgrou
 /* Content */
 
 #document #core #content { display: inline-block;padding: 60px 30px 30px;margin: 0px auto;vertical-align: top;max-width: 700px;width: 100%; }
-#document #core #content #main > p:first-child { border-bottom: 1.5px solid var(--mono_3);padding-bottom: 30px }
+#document #core #content #main > p:first-child { border-bottom: 1.5px solid var(--mono_3);padding-bottom: 32px }
 #document #core #content p { font-size: 18px;display: block;line-height: 27px;font-family: var(--font);margin: 0px 0px 30px}
 #document #core #content p b { font-family: var(--font_b); font-weight: normal; }
 #document #core #content p b a { font-family: var(--font_b); font-weight: normal; }
